--- a/index.html
+++ b/index.html
@@ -12,22 +12,21 @@
       <nav>
         <a href="./index.html">Web Studio </a>
         <ul>
-          <li><a href="">Студія</a></li>
+          <li><a href="./index.html">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
 
     <!--Шапка-->
     <main>
       <section>
-        <h1>
-          Ефективні рішення для <br>
-          вашого бізнесу
-        </h1>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
 
@@ -71,22 +70,22 @@
           <li>
             <img src="./images/team1.jpg" alt="Ігор Дем'яненко" width="270">
             <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/team2.jpg" alt="Ольга Рєпіна" width="270">
             <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/team3.jpg" alt="Микола Тарасов" width="270">
             <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <p lang="en">Marketing</p>
           </li>
           <li>
             <img src="./images/team4.jpg" alt="Михайло Єрмаков" width="270">
             <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
